RESOLVED FIXED286820
[WebGPU] Infinite loop forward progress detection leads to problematic codegen
https://bugs.webkit.org/show_bug.cgi?id=286820
Summary [WebGPU] Infinite loop forward progress detection leads to problematic codegen
Mike Wyrzykowski
Reported 2025-01-31 12:51:12 PST
[WebGPU] Infinite loop forward progress detection leads to problematic codegen
Attachments
Mike Wyrzykowski
Comment 1 2025-01-31 12:51:22 PST
Mike Wyrzykowski
Comment 2 2025-01-31 13:13:24 PST
EWS
Comment 3 2025-02-02 10:32:25 PST
Committed 289703@main (2a34f2731ad7): <https://commits.webkit.org/289703@main> Reviewed commits have been landed. Closing PR #39831 and removing active labels.
EWS
Comment 4 2025-02-05 14:02:31 PST
Committed 289651.44@safari-7621-branch (bb2226babd72): <https://commits.webkit.org/289651.44@safari-7621-branch> Reviewed commits have been landed. Closing PR #2512 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.