[WebGPU] Infinite loop forward progress detection leads to problematic codegen https://bugs.webkit.org/show_bug.cgi?id=286820 rdar://143899010

Reviewed by Cameron McCormack.

The UB loop detection was insufficient to prevent against unwanted compiler
optimizations.

By mirroring WebGL we see the UB issues in this repro and others addressed.

* LayoutTests/fast/webgpu/nocrash/fuzz-286820-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-286820.html: Added.
Regression test must be run locally as compute shaders which run
infinite loops do not terminate on macOS without boot-args set.

* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::visit):

Canonical link: https://commits.webkit.org/289703@main